Added About Us and fixed links

--- a/gallery.html
+++ b/gallery.html
@@ -143,7 +143,7 @@
     <div class="abra" id ="open">
         <a class="abra" href="index.html"> HOME </a>
         <a class="abra" href="menu.html"> MENU </a>
-        <a class="abra" href="maintenance page.html"> CREATE </a>
+        <a class="abra" href="create.html"> CREATE </a>
         <a class="abra" id="active" href="gallery.html"> GALLERY </a>
     </div>
 
