--- a/menu.html
+++ b/menu.html
@@ -136,7 +136,7 @@
     <div class="abra" id ="open">
         <a class="abra" href="index.html"> HOME </a>
         <a class="abra" id="active" href="menu.html"> MENU </a>
-        <a class="abra" href="maintenance page.html"> CREATE </a>
+        <a class="abra" href="create.html"> CREATE </a>
         <a class="abra" href="gallery.html"> GALLERY </a>
     </div>
 
