--- a/create.html
+++ b/create.html
@@ -143,10 +143,10 @@
 <!-- NAVIGATION BAR -->    
 
     <div class="abra" id ="open">
-        <a class="abra" href="index.html"> HOME </a>
-        <a class="abra" href="menu.html"> MENU </a>
-        <a class="abra" id="active" href="create.html"> CREATE </a>
-        <a class="abra" href="gallery.html"> GALLERY </a>
+        <a class="abra" href="index"> HOME </a>
+        <a class="abra" href="menu"> MENU </a>
+        <a class="abra" id="active" href="create"> CREATE </a>
+        <a class="abra" href="gallery"> GALLERY </a>
     </div>
 
 
