--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
     <!-- NAVIGATION BAR -->
 
     <div class="abra" id="open">
-      <a class="abra" id="active" href="index.html"> HOME </a>
-      <a class="abra" href="menu.html"> MENU </a>
-      <a class="abra" href="create.html"> CREATE </a>
-      <a class="abra" href="gallery.html"> GALLERY </a>
+      <a class="abra" id="active" href="index"> HOME </a>
+      <a class="abra" href="menu"> MENU </a>
+      <a class="abra" href="create"> CREATE </a>
+      <a class="abra" href="gallery"> GALLERY </a>
     </div>
 
     <a href="index">
