Fixed reference to DIY image

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
         </a>
         <a href="create.html">
           <div class="tourImages">
-            <img class="theImage img3" src="img/home/DIY-cakes.jpg" />
+            <img class="theImage img3" src="img/home/DIY-cupcake.jpg" />
             <div class="tourName nme3">MAKE YOUR OWN CUPCAKE</div>
           </div>
         </a>
