Fixed FontAwesome Icons

--- a/create.html
+++ b/create.html
@@ -156,8 +156,8 @@
     <img class="reachUs" src="img/nav/cookie-trigger.png">
     <img class="cookie" src="img/nav/cookie1.png">
     <div class="socMed">
-        <a href="https://www.facebook.com/JosHans-Cakes-and-Pastries-592866694400170/" target="_blank"><img class="fb-nav" src="img/nav/fb-icon.png"></a>
-        <a href="#"><img class="IG-nav" src="img/nav/IG-icon.png"></a>
+        <a href="https://www.facebook.com/JoshansCakes" target="_blank"><img class="fb-nav" src="img/nav/fb-icon.png"></a>
+        <a href="https://www.instagram.com/joshanscakes/"><img class="IG-nav" src="img/nav/IG-icon.png"></a>
         <a href="javascript:" onclick="navResponse()"><img class="bars-nav" src="img/nav/bars-icon.png"></a>
     </div>
     <div class="fullscreenNav">
@@ -999,8 +999,8 @@ function test_input($data) {
                 <span class="contactUs-text"> &nbsp @JoshansCakes </span></a>
             </div>
             <div class="contactUs">
-                <a href = "mailto: abc@example.com"><i class="material-icons mail">&#xe0be;</i>
-                <span class="contactUs-text"> &nbsp joshans-info@gmail.com </span></a>
+                <a href = "mailto: joshanscakes@gmail.com"><i class="material-icons mail">&#xe0be;</i>
+                <span class="contactUs-text"> &nbsp joshanscakes@gmail.com </span></a>
             </div>
         </div>
 
@@ -1008,7 +1008,7 @@ function test_input($data) {
     <div class="footer" id="rightColumn">
         <h3> Keep In Touch </h3>
             <a href="https://www.facebook.com/JoshansCakes" target="_blank"><i style='font-size:24px' class='fab fb'>&#xf082;</i></a>
-            <a href="https://www.facebook.com/JoshansCakes" target="_blank"><i style='font-size:24px' class='fab ig'>&#xf16d;</i></a>
+            <a href="https://www.instagram.com/joshanscakes/" target="_blank"><i style='font-size:24px' class='fab ig'>&#xf16d;</i></a>
     </div>
 
 </div>
