--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
       rel="stylesheet"
     />
     <!-- ICONS  -->
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script
+      src="https://kit.fontawesome.com/bd7ca5248b.js"
+      crossorigin="anonymous"
+    ></script>
 
     <link rel="stylesheet" href="home-style.css" />
     <!-- STYLESHEETS -->
@@ -164,12 +167,12 @@
     <div class="reachUs"></div>
     <img class="cookie" src="img/nav/cookie1.png" />
     <div class="socMed">
-      <a
-        href="https://www.facebook.com/JosHans-Cakes-and-Pastries-592866694400170/"
-        target="_blank"
+      <a href="https://www.facebook.com/JoshansCakes/" target="_blank"
         ><img class="fb-nav" src="img/nav/fb-icon.png"
       /></a>
-      <a href="#"><img class="IG-nav" src="img/nav/IG-icon.png" /></a>
+      <a href="https://www.instagram.com/joshanscakes/"
+        ><img class="IG-nav" src="img/nav/IG-icon.png"
+      /></a>
       <a href="javascript:" onclick="navResponse()"
         ><img class="bars-nav" src="img/nav/bars-icon.png"
       /></a>
@@ -632,10 +635,10 @@
               >
             </div>
             <div class="contactUs">
-              <a href="mailto: abc@example.com"
+              <a href="mailto: joshanscakes@gmail.com"
                 ><i class="material-icons mail">&#xe0be;</i>
                 <span class="contactUs-text">
-                  &nbsp joshans-info@gmail.com
+                  &nbsp joshanscakes@gmail.com
                 </span></a
               >
             </div>
@@ -646,7 +649,7 @@
           <a href="https://www.facebook.com/JoshansCakes" target="_blank"
             ><i style="font-size: 24px" class="fab fb">&#xf082;</i></a
           >
-          <a href="https://www.facebook.com/JoshansCakes" target="_blank"
+          <a href="https://www.instagram.com/joshanscakes/" target="_blank"
             ><i style="font-size: 24px" class="fab ig">&#xf16d;</i></a
           >
         </div>
