--- a/create.html
+++ b/create.html
@@ -9,7 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">   <!-- ICONS  -->
-    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <script
+    src="https://kit.fontawesome.com/bd7ca5248b.js"
+    crossorigin="anonymous"
+  ></script>
     
     <link rel="shortcut icon" type="image/x-icon" href="img/joshann-icon.ico"> <!-- icon -->
 
