Fixed create logo

--- a/create.html
+++ b/create.html
@@ -685,7 +685,7 @@ function test_input($data) {
 
 <div class="masterWorkspace">
     <div class="selectionBox">
-        <div id="createLogo" style="background-image: url(img/home/DIY-Cakes.png); background-size: contain; background-position: center; background-repeat: no-repeat;"></div>
+        <div id="createLogo" style="background-image: url(img/create/DIY-Cakes.png); background-size: contain; background-position: center; background-repeat: no-repeat;"></div>
         <div class="leftPane">
             
             
